--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Noto Sans", sans-serif;
+}
